# cue

./: .gitignore  .rgignore  AGENTS.md  Cargo.toml  README.md  cast.json  cast.json.example  flake.nix  opencode.json
crates/acuity/: Cargo.toml
crates/acuity-api/: Cargo.toml
crates/acuity-schema/: .gitignore  Cargo.toml
crates/acuity/src/: config.rs  db.rs  main.rs  tests.rs
crates/cue/: Cargo.toml
crates/cuelib/: Cargo.toml
crates/cuelib/src/: artifact.rs  config.rs  git.rs  head.rs  lib.rs  project.rs  store.rs
crates/curator/: Cargo.toml
crates/curator/src/: activity.rs  app.rs  event.rs  input.rs  main.rs  msg.rs  sse.rs  tui.rs  ui.rs
cue/: Cargo.toml
cue/src/: cli.rs  config.rs
cue/tests/: add.rs  context_show.rs  helpers.rs  init.rs  list.rs  log.rs  project.rs
cuelib/: Cargo.toml
cuelib/src/: artifact.rs  lib.rs  project.rs
docs/: acuity.md  cue.md  curator.md
feat-acuity-api-mvp/plan/: index.md
feat-acuity-api-mvp/spec/: log.md
feat-acuity-full-event-model/plan/: phase-3.md
feat-acuity-full-event-model/spec/: log.md
feat-acuity-mvp/plan/: phase-1-acuity-mvp.md
feat-acuity-mvp/spec/: log.md
feat-artifact-frontmatter/: context.json
feat-artifact-frontmatter/plan/: index.md
feat-artifact-frontmatter/spec/: index.md  log.md
feat-artifact-restructure/doc/: artifact-restructure-research.md
feat-artifact-restructure/plan/: index.md
feat-artifact-restructure/spec/: index.md  log.md  plan.md
feat-context/: context.json
feat-context/doc/: context-enhancement-plan.md
feat-context/spec/: index.md  log.md  plan.md  todo.md
feat-cue-dir-flag/spec/: log.md
feat-cue-plugins-full-emitter/: context.json
feat-cue-plugins-full-emitter/plan/: phase-4-full-emitter.md
feat-cue-plugins-full-emitter/spec/: log.md
feat-cueban/spec/: index.md  log.md
feat-curator-activity-item/: context.json  log.md
feat-curator-activity-item/note/: sessions-list-improvement.md
feat-curator-activity-item/spec/: index.md  log.md
feat-curator-improvements-schema/: context.json
feat-curator-improvements-schema/spec/: log.md
feat-curator-mvp/: context.json
feat-curator-mvp/plan/: index.md
feat-curator-mvp/spec/: index.md  log.md
feat-curator-w-acuity/: context.json
feat-curator-w-acuity/spec/: log.md
feat-kanban-multi-project/: context.json  log.md
feat-log-branch/: context.json
feat-mem-log/: context.json
feat-mem-plan/: context.json
fix-log-md-location/: log.md
master/: context.json  log.md
master/doc/: test.md  (+1 more)
nixos/: acuity.nix  module.nix
src/: cli.rs  config.rs  main.rs
tests/: add.rs  config_show.rs  context_init.rs  context_render.rs  helpers.rs  init.rs  list.rs  log.rs
(+288 files in other folders)
