[package]
name = "cuelib"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
dirs = "6.0.0"
figment = { version = "0.10.19", features = ["json", "env"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
temp-env = "0.3"
tempfile = "3.27.0"
