[package]
name = "curator"
version = "0.1.0"
edition = "2024"

[dependencies]
acuity-api  = { path = "../acuity-api" }
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "env"] }
crossterm = { version = "0.28" }
cuelib = { path = "../cuelib" }
futures-util  = { version = "0.3", default-features = false, features = ["std"] }
ratatui = "0.29"
reqwest     = { version = "0.12", default-features = false,
                features = ["rustls-tls", "stream"] }
serde_json  = "1"
tokio       = { version = "1", features = ["rt", "time", "net", "macros"] }

[dev-dependencies]
acuity-schema = { path = "../acuity-schema" }
